# TinCan

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  NOTES.md  conanfile.py  enemy_database.json  imgui.ini  projectile_database.json  weapon_database.json
data/: behaviour_database.json  drop_database.json  encounter_database.json  enemy_database.json  level_database.json  pickup_database.json  projectile_database.json  spawner_database.json  sprite_database.json  sprite_database_enemy.json  weapon_database.json  weapon_database_enemy.json  weapon_database_player.json
levels/: test.json
src/: collision_utils.cpp  collision_utils.h  component_body.h  component_drop.h  component_entity.h  component_health.h  component_passives.h  databases.cpp  databases.h  dataref.h  enemy_database.cpp  enemy_database.h  entity_properties.h  game_layer.cpp  game_layer.h  game_world.cpp  game_world.h  gamedata.cpp  gamedata.h  gamedata_behaviour.h  gamedata_database.h  gamedata_drop.cpp  gamedata_drop.h  gamedata_encounter.h  gamedata_enemy.cpp  gamedata_enemy.h  gamedata_entity.h  gamedata_fwd.h  gamedata_level.cpp  gamedata_level.h  gamedata_pickup.cpp  gamedata_pickup.h  gamedata_projectile.cpp  gamedata_projectile.h  gamedata_spawner.cpp  gamedata_spawner.h  gamedata_sprite.cpp  gamedata_sprite.h  gamedata_weapon.cpp  gamedata_weapon.h  (+66 more)
